--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Padeye – Spreadsheet-Exact Checks (Dark)</title>
+<title>>Padeye Checker Tool (Dark)</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
   :root{
@@ -45,7 +45,7 @@
 <body>
 <div class="max-w-6xl mx-auto px-4 py-6">
   <header class="mb-6 flex items-center justify-between">
-    <h1 class="text-2xl font-semibold">Padeye – Spreadsheet-Exact Checks</h1>
+    <h1 class="text-2xl font-semibold">Padeye Checker Tool</h1>
     <div class="no-print flex gap-2">
       <button id="helpBtn" class="btn">Help</button>
       <button onclick="window.print()" class="btn primary">Print/Save</button>
@@ -393,3 +393,4 @@ helpModal.addEventListener('click',e=>{ if(e.target===helpModal) helpModal.class
 </script>
 </body>
 </html>
+
